# email-triage-openenv

./: .dockerignore  .gitignore  AGENT_SOCIETY_README.md  BLOG_POST.md  Dockerfile  README.md  USER_MANUAL.md  app.py  client.py  colab_grpo_training.ipynb  data.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  run_all.sh  start.sh  task_grader.py  test_task_grader.py  tools.py  ui.py
agents/: society.py
curriculum/: manager.py
server/: app.py  email_triage_environment.py
server/services/: curriculum.py  episode_tracker.py  tasks.py
server/tests/: __init__.py  test_environment.py
ui_streamlit/: app.py
