[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email_triage"
version = "0.1.0"
description = "Advanced Enterprise Email Triage RL Environment for OpenEnv"
requires-python = "==3.12.*"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
# Server entry point — enables: uv run --project . server
server = "email_triage.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["email_triage", "email_triage.server", "email_triage.server.services"]
package-dir = { "email_triage" = ".", "email_triage.server" = "server", "email_triage.server.services" = "server/services" }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
files = ["*.py", "server/"]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
